--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #C0C0C0;
+  background-image: url("http://images.akamai.steamusercontent.com/ugc/442825514583242086/CB118ABE50B8A2C4681A7C56174D90EA876D8AFE/");
   color: #fff;
   padding-top: 40px;
   padding-bottom: 40px;
@@ -59,6 +60,7 @@ li {
 }
 
 #addItem {
+  color: black;
   float: left;
   width: 140px;
   margin-top: 5px;
@@ -66,6 +68,7 @@ li {
 }
 
 #addQuantity {
+  color: black;
   float: left;
   width: 80px;
   margin-top: 5px;
@@ -73,6 +76,7 @@ li {
 }
 
 #addPrice {
+  color: black;
   float: left;
   width: 80px;
   margin-top: 5px;
@@ -85,4 +89,8 @@ li {
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
+}
+
+.selected {
+
 }
